[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = ["."]


[project]
name = "common_utils"
version = "0.0.35"
description = "Shared utilities for app and runner"
authors = [{name = "Chris", email = "crsilkworth@gmail.com"}]


[project.optional-dependencies]
db = [
    "requests_oauthlib<2.1.0",
    "SQLAlchemy<2.1.0",
    "psycopg2-binary<2.10.0",
    "pymongo<4.13",
    "google-cloud-bigquery<4.0.0",
    "google-cloud-storage<2.20.0",
    "mongoengine<0.30",

]