[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = ["."]


[project]
name = "common_utils"
version = "0.0.39"
description = "Shared utilities for app and runner"
authors = [{name = "Chris", email = "crsilkworth@gmail.com"}]

dependencies = [
  "PyJWT<2.11.0",
  "Flask<3.2.0",
  "sshtunnel<0.5.0",
  "pandas<2.1.0",
  "pillow<11.3.0",
  "PyPDF2<3.1.0",
  "plotly<6.0",
  "typeguard<4.2",
  "networkx<3.2",
  "lxml<5.4.0",
]
