[tool.poetry]
name = "common-utils"
version = "0.10.703"
description = "Shared utilities for app and runner"
authors = ["Christopher Silkworth"]
packages = [
    { include = "utils" },
    { include = "exceptions" }
]

[tool.poetry.dependencies]
python = ">=3.13,<3.15"
websocket-client = "<1.9.0"
numpy = ">=2.3.4,<3.0.0"
torch = ">=2.9.0,<3.0.0"
pandas = ">=2.3.3,<3.0.0"
plotly = ">=6.3.1,<7.0.0"
python-quickbooks = ">=0.9.12,<0.10.0"
pymongo = ">=4.15.3,<5.0.0"
psycopg2-binary = ">=2.9.11,<3.0.0"
google-cloud-bigquery = ">=3.38.0,<4.0.0"
typeguard = ">=4.4.4,<5.0.0"
lxml = ">=6.0.2,<7.0.0"
sshtunnel = ">=0.4.0,<0.5.0"
pillow = ">=12.0.0,<13.0.0"
pypdf2 = ">=3.0.1,<4.0.0"
black = ">=25.9.0,<26.0.0"
google-cloud-firestore = "^2.21.0"
google-auth = "^2.42.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
